# qwen3-tts.cpp

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.opencode/: oh-my-opencode.json
.sisyphus/plans/: qwen3-tts-ggml.md
reference/: det_metadata.json  det_prefill_token_types.json  metadata.json
scripts/: compare_e2e.py  convert_tokenizer_to_gguf.py  convert_tts_to_gguf.py  generate_deterministic_reference.py  generate_reference_outputs.py  run_all_tests.sh
src/: audio_tokenizer_decoder.cpp  audio_tokenizer_decoder.h  audio_tokenizer_encoder.cpp  audio_tokenizer_encoder.h  gguf_loader.cpp  gguf_loader.h  main.cpp  qwen3_tts.cpp  qwen3_tts.h  tts_transformer.cpp  tts_transformer.h
tests/: test_encoder.cpp  test_transformer.cpp
